# ChangeLog for dev-lang/R
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/R/ChangeLog,v 1.241 2015/02/07 11:05:26 dilfridge Exp $

  07 Feb 2015; Andreas K. Huettel <dilfridge@gentoo.org> R-3.0.1.ebuild:
  Add slot operator on icu dependency

*R-3.1.2 (03 Nov 2014)

  03 Nov 2014; Denis Dupeyron <calchan@gentoo.org> +R-3.1.2.ebuild:
  Version bump, thanks to Grischa Toedt (bug #527834).

  01 Sep 2014; Michał Górny <mgorny@gentoo.org> R-3.0.3.ebuild, R-3.1.0.ebuild,
  R-3.1.1.ebuild:
  Remove := subslot operator from || () block since it is meaningless and
  broken.

  28 Aug 2014; Michał Górny <mgorny@gentoo.org> R-3.1.1.ebuild:
  Remove USE=bash-completion, install the completion file unconditionally
  following the Council decision.

*R-3.1.1 (28 Jul 2014)

  28 Jul 2014; Denis Dupeyron <calchan@gentoo.org> +R-3.1.1.ebuild:
  Version bump, bug #517098.

  16 Apr 2014; Sébastien Fabbro <bicatali@gentoo.org> R-3.0.1.ebuild,
  R-3.0.3.ebuild, R-3.1.0.ebuild:
  Do not compress NEWS.rds, bug #507800, thanks Bernd Feige

*R-3.1.0 (15 Apr 2014)

  15 Apr 2014; Sébastien Fabbro <bicatali@gentoo.org> +R-3.1.0.ebuild,
  -R-3.0.1-r1.ebuild, -R-3.0.2.ebuild:
  Version bump

  07 Apr 2014; Benda Xu <heroxbd@gentoo.org> R-3.0.2.ebuild, R-3.0.3.ebuild:
  bug 505904 by Robert McGehee: revert the blas library configure update for bug
  499356. I missunderstood the purpose of this option.

  19 Mar 2014; Sébastien Fabbro <bicatali@gentoo.org> R-3.0.3.ebuild:
  Re-added the autoconf since we modify the configure.ac

*R-3.0.3 (19 Mar 2014)

  19 Mar 2014; Sébastien Fabbro <bicatali@gentoo.org> +R-3.0.3.ebuild,
  R-3.0.1-r1.ebuild, files/R-2.11.1-parallel.patch,
  files/R-2.13.1-zlib_header_fix.patch, files/R-3.0.0-rmath-shared.patch:
  Version bump

  02 Mar 2014; Andreas K. Huettel <dilfridge@gentoo.org> R-3.0.2.ebuild:
  Add subslot dependency on dev-libs/icu
