@@ -1,15 +1,15 @@
 DEFINED_PHASES=compile configure install postinst prepare setup
-DEPEND=app-arch/bzip2 app-text/ghostscript-gpl dev-libs/libpcre virtual/blas cairo? ( x11-libs/cairo[X] x11-libs/pango ) icu? ( dev-libs/icu:= ) jpeg? ( virtual/jpeg:0 ) lapack? ( virtual/lapack ) perl? ( dev-lang/perl ) png? ( media-libs/libpng ) readline? ( sys-libs/readline ) tk? ( dev-lang/tk ) X? ( x11-libs/libXmu x11-misc/xdg-utils ) virtual/pkgconfig doc? ( virtual/latex-base dev-texlive/texlive-fontsrecommended ) !<sys-devel/gettext-0.18.1.1-r3 || ( >=sys-devel/automake-1.13:1.13 >=sys-devel/automake-1.15:1.15 ) >=sys-devel/autoconf-2.69 >=sys-devel/libtool-2.4 virtual/fortran
+DEPEND=app-arch/bzip2 app-text/ghostscript-gpl dev-libs/libpcre virtual/blas cairo? ( x11-libs/cairo[X] x11-libs/pango ) icu? ( dev-libs/icu:= ) jpeg? ( virtual/jpeg:0 ) lapack? ( virtual/lapack ) perl? ( dev-lang/perl ) png? ( media-libs/libpng:0= ) readline? ( sys-libs/readline:0= ) tk? ( dev-lang/tk:0= ) X? ( x11-libs/libXmu x11-misc/xdg-utils ) virtual/pkgconfig doc? ( virtual/latex-base dev-texlive/texlive-fontsrecommended ) !<sys-devel/gettext-0.18.1.1-r3 || ( >=sys-devel/automake-1.13:1.13 >=sys-devel/automake-1.15:1.15 ) >=sys-devel/autoconf-2.69 >=sys-devel/libtool-2.4 virtual/fortran
 DESCRIPTION=Language and environment for statistical computing and graphics
 EAPI=5
 HOMEPAGE=http://www.r-project.org/
 IUSE=bash-completion cairo doc icu java jpeg lapack minimal nls openmp perl png prefix profile readline static-libs tiff tk X
 KEYWORDS=amd64 hppa ia64 ppc ppc64 sparc x86 ~x86-fbsd ~amd64-linux ~x86-linux ~x64-macos
 LICENSE=|| ( GPL-2 GPL-3 ) LGPL-2.1
-RDEPEND=app-arch/bzip2 app-text/ghostscript-gpl dev-libs/libpcre virtual/blas cairo? ( x11-libs/cairo[X] x11-libs/pango ) icu? ( dev-libs/icu:= ) jpeg? ( virtual/jpeg:0 ) lapack? ( virtual/lapack ) perl? ( dev-lang/perl ) png? ( media-libs/libpng ) readline? ( sys-libs/readline ) tk? ( dev-lang/tk ) X? ( x11-libs/libXmu x11-misc/xdg-utils ) ( || ( <sys-libs/zlib-1.2.5.1-r1 >=sys-libs/zlib-1.2.5.1-r2[minizip] ) ) app-arch/xz-utils java? ( >=virtual/jre-1.5 ) virtual/fortran
+RDEPEND=app-arch/bzip2 app-text/ghostscript-gpl dev-libs/libpcre virtual/blas cairo? ( x11-libs/cairo[X] x11-libs/pango ) icu? ( dev-libs/icu:= ) jpeg? ( virtual/jpeg:0 ) lapack? ( virtual/lapack ) perl? ( dev-lang/perl ) png? ( media-libs/libpng:0= ) readline? ( sys-libs/readline:0= ) tk? ( dev-lang/tk:0= ) X? ( x11-libs/libXmu x11-misc/xdg-utils ) ( || ( <sys-libs/zlib-1.2.5.1-r1 >=sys-libs/zlib-1.2.5.1-r2[minizip] ) ) app-arch/xz-utils java? ( >=virtual/jre-1.5 ) virtual/fortran
 REQUIRED_USE=png? ( || ( cairo X ) ) jpeg? ( || ( cairo X ) ) tiff? ( || ( cairo X ) )
 RESTRICT=minimal? ( test )
 SLOT=0
 SRC_URI=mirror://cran/src/base/R-3/R-3.0.1.tar.gz bash-completion? ( http://dev.gentoo.org/~bicatali/distfiles/R-20130129.bash_completion.bz2 )
 _eclasses_=autotools	999c8f6cf5d91495cb0779588f20716c	bash-completion-r1	c8399c7c7ecbcf7ed6e5bd3abb3d4af3	eutils	9fb270e417e0e83d64ca52586c4a79de	flag-o-matic	c263990f1b677b0f0be0a3299f179762	fortran-2	db8710b355fc5598015c4bc3aad3bdb0	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	79b635d29abf0572d6a1b0dc8e63c0e4	versionator	cd0bcdb170807e4a1984115e9d53a26f
-_md5_=f01f185fe637de3acc964bdd7c54128f
+_md5_=dece0d0f2b80a3e3bf54788ec78dd3a2
